--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["TropicSapling <tropical.productions.scratch@gmail.com>"]
 
 [dependencies]
-
+rand = "0.4"
 
 [lib]
 crate-type = ["cdylib"]
